Updated SCM information for move to GitHub

--- a/pom.xml
+++ b/pom.xml
@@ -16,10 +16,10 @@
 	<name>Black Pepper Support Validation Test</name>
 	
 	<scm>
-		<connection>scm:git:git@codebasehq.com:blackpepper/black-pepper-support/bp-support-validation-test.git</connection>
-		<developerConnection>scm:git:git@codebasehq.com:blackpepper/black-pepper-support/bp-support-validation-test.git</developerConnection>
+		<connection>scm:git:git@github.com:BlackPepperSoftware/bp-support-validation-test.git</connection>
+		<developerConnection>scm:git:git@github.com:BlackPepperSoftware/bp-support-validation-test.git</developerConnection>
 		<tag>HEAD</tag>
-		<url>https://blackpepper.codebasehq.com/projects/black-pepper-support/repositories/bp-support-validation-test</url>
+		<url>https://github.com/BlackPepperSoftware/bp-support-validation-test</url>
 	</scm>
 
 	<dependencies>
