--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,8 @@
 	<version>1.1.0-SNAPSHOT</version>
 
 	<name>Black Pepper Support Validation Test</name>
+	<description>Support for testing with Bean Validation.</description>
+	<url>https://github.com/BlackPepperSoftware/bp-support-validation-test</url>
 	
 	<scm>
 		<connection>scm:git:git@github.com:BlackPepperSoftware/bp-support-validation-test.git</connection>
